prepare to deploymont

--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = pokedex_sona
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.pokedexSona
+PRODUCT_BUNDLE_IDENTIFIER = com.sonex23.pokedexSona
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 com.sonex23. All rights reserved.
