--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "pokedex_sona" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "pokedex_sona" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.sonex23. All rights reserved." "\0"
             VALUE "OriginalFilename", "pokedex_sona.exe" "\0"
             VALUE "ProductName", "pokedex_sona" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
